--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
 <body>
     <h1>Loja Virtual</h1>
     <p>Bem vindo(a) a nossa loja virtual</p>
+
+    <div class="card">
+        <div>
+            <img src="assets/img_4.png" alt="" class="img-card">
+        </div>
+        <div class="descricao">Anel de prata e zircônia</div>
+        <div class="preco">R$ 900,00</div>
+        <div class="pagamento">À vista no pix ou <b>10x R$ 90,00 sem juros</b></div>
+        <div class="botao-comprar">
+            <button class="botao-card">Comprar</button>
+        </div>
+    </div>
 </body>
 </html>
