--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+
+    <ul class="menu">
+        <li class="item-menu">
+            <a href="#" class="link-menu">Anéis</a>
+        </li>
+        <li class="item-menu">
+            <a href="#" class="link-menu">Pulseiras</a>
+        </li>
+        <li class="item-menu">
+            <a href="#" class="link-menu">Colares</a>
+        </li>
+        <li class="item-menu">
+            <a href="#" class="link-menu">Brincos</a>
+        </li>
+    </ul>
+    
     <h1>Loja Virtual</h1>
     <p>Bem vindo(a) a nossa loja virtual</p>
 
